# Segmentation-Database-and-Code

./: LICENSE  README.md
Images_Database/Blue_Canteen/: 10_croped_.pcd  14_croped_.pcd  15_croped_.pcd  16_croped_.pcd  17_croped_.pcd  18_croped_.pcd  19_croped_.pcd  1_croped_.pcd  3_croped_.pcd
Images_Database/Cardboard_Box/: 10_croped_.pcd  11_croped_.pcd  12_croped_.pcd  13_croped_.pcd  14_croped_.pcd  15_croped_.pcd  16_croped_.pcd  17_croped_.pcd  18_croped_.pcd  19_croped_.pcd  1_croped_.pcd  20_croped_.pcd  2_croped_.pcd  3_croped_.pcd  4_croped_.pcd  5_croped_.pcd  6_croped_.pcd  7_croped_.pcd  8_croped_.pcd  9_croped_.pcd
Images_Database/Cardboard_Cup/: 10_croped_.pcd  11_croped_.pcd  12_croped_.pcd  13_croped_.pcd  14_croped_.pcd  15_croped_.pcd  16_croped_.pcd  17_croped_.pcd  18_croped_.pcd  19_croped_.pcd  1_croped_.pcd  20_croped_.pcd  2_croped_.pcd  3_croped_.pcd  4_croped_.pcd  5_croped_.pcd  6_croped_.pcd  7_croped_.pcd  8_croped_.pcd  9_croped_.pcd
Images_Database/Clay_Cup/: 10_croped_.pcd  11_croped_.pcd  12_croped_.pcd  13_croped_.pcd  14_croped_.pcd  15_croped_.pcd  16_croped_.pcd  17_croped_.pcd  18_croped_.pcd  19_croped_.pcd  1_croped_.pcd  20_croped_.pcd  2_croped_.pcd  3_croped_.pcd  4_croped_.pcd  5_croped_.pcd  6_croped_.pcd  7_croped_.pcd  8_croped_.pcd  9_croped_.pcd
Images_Database/Gel_Tube/: 10_croped_.pcd  11_croped_.pcd  12_croped_.pcd  13_croped_.pcd  14_croped_.pcd  15_croped_.pcd  16_croped_.pcd  (+13 more)
code_segmentation_and_crop/: CMakeLists.txt  code.cpp  segmentation.cpp
code_segmentation_only/: CMakeLists.txt  segmentation.cpp
(+60 files in other folders)
